(Projeto refatorado para o tema Star Wars) Adicionando API e componentes para o cadastros da Naves.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,37 @@
-<nav>
-  <button routerLink="/criar-conta">Abertura de Conta</button>
-</nav>
+<div class="fundo-galaxia">
+  <div class="container">
+    
+    <h1 class="titulo">🚀 Garagem Intergaláctica</h1>
 
-<main>
-  <router-outlet></router-outlet>
-</main>
+    <div class="grid-naves">
+      
+      @for (nave of listaNaves; track nave.id) {
+        <div class="card">
+          
+          <div class="card-imagem">
+            <img 
+              [src]="'https://starwars-visualguide.com/assets/img/starships/' + nave.id + '.jpg'" 
+              alt="{{ nave.modelo }}"
+              onerror="this.src='https://starwars-visualguide.com/assets/img/placeholder.jpg'"
+            >
+          </div>
+
+          <div class="card-conteudo">
+            <h2>{{ nave.modelo }}</h2>
+            <p class="descricao">{{ nave.descricao }}</p>
+            
+            <div class="detalhes-rapidos">
+              <span>⚡ {{ nave.max_velocidade }}</span>
+              <span>👥 {{ nave.equipe }} Tripulantes</span>
+            </div>
+
+            <p class="preco">💰 {{ nave.valor_creditos }} Créditos</p>
+          </div>
+
+        </div>
+      }
+
+    </div>
+
+  </div>
+</div>
