--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: hwb(219 4% 87%); 
+  color: white;
+  font-family: sans-serif;
+}
